# opencv-ios-lib

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  build.sh
app/opencv/: CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
opencv/: CMakeLists.txt
